[package]
name = "lococode"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
lococode-core = {version = "0.1", path = "../lococode-core"}
clap = { version = "4.5.59", features = ["derive"] }
