[package]
name = "lococode"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
lococode-core = { version = "0.1.1", path = "../lococode-core" }
